@@ -416,6 +416,62 @@ class ModelLinkGraphNode : public MarkedElement,
         const ModelLinkGraphArc& adj(int which) const;
 
         /**
+         * Returns the number of loops incident with this node.
+         *
+         * For a connected 4-valent graph, this is equivalent to the
+         * number of 1-gons in the dual cell decomposition that are incident
+         * with this node.
+         *
+         * If the underlying graph is disconnected, this routine will
+         * ignore the presence of any other connected components.  In
+         * particular, it will not worry about whether other disjoint
+         * components have been placed inside or outside any 1-gons.
+         *
+         * \return The number of incident loops, which will be between 0 and 2
+         * inclusive.
+         */
+        int loops() const;
+
+        /**
+         * Returns the number of embedded bigons in the dual cell
+         * decomposition that are incident with this node.
+         *
+         * Here _embedded_ means that we do not count bigons where both
+         * vertices are the same.  Note that a _non-embedded_ incident bigon
+         * would imply that all four arcs at this node were joined together to
+         * form two loops, each bounding its own 1-gon (which models a
+         * 1-crossing unknot component of a link diagram).
+         *
+         * If the underlying graph is disconnected, this routine will
+         * ignore the presence of any other connected components.  In
+         * particular, it will not worry about whether other disjoint
+         * components have been placed inside or outside any bigons.
+         *
+         * \return The number of incident embedded bigons, which will be
+         * between 0 and 4 inclusive.
+         */
+        int bigons() const;
+
+        /**
+         * Returns the number of embedded triangles in the dual cell
+         * decomposition that are incident with this node.
+         *
+         * Here _embedded_ means that we do not count triangles where two
+         * vertices are the same.  Note that a _non-embedded_ incident triangle
+         * would imply that the underlying graph contains a loop bounding a
+         * 1-gon (which models a trivial twist in a link diagram).
+         *
+         * If the underlying graph is disconnected, this routine will
+         * ignore the presence of any other connected components.  In
+         * particular, it will not worry about whether other disjoint
+         * components have been placed inside or outside any triangles.
+         *
+         * \return The number of incident embedded triangles, which will be
+         * between 0 and 4 inclusive.
+         */
+        int triangles() const;
+
+        /**
          * Writes a short text representation of this node to the
          * given output stream.
          *
@@ -653,6 +709,16 @@ class ModelLinkGraph : public Output<ModelLinkGraph> {
          * \return the induced cellular decomposition of the sphere.
          */
         const ModelLinkGraphCells& cells() const;
+
+        /**
+         * Identifies whether this graph is connected.
+         *
+         * For the purposes of this routine, an empty graph is considered to
+         * be connected.
+         *
+         * \return \c true if and only if this graph is connected.
+         */
+        bool isConnected() const;
 
         /**
          * Identifies whether this graph is simple; that is, has no loops or
