@@ -568,6 +568,26 @@ Parameter ``which``:
 Returns:
     a reference to the corresponding arc exiting this node.)doc";
 
+// Docstring regina::python::doc::ModelLinkGraphNode_::bigons
+static const char *bigons =
+R"doc(Returns the number of embedded bigons in the dual cell decomposition
+that are incident with this node.
+
+Here _embedded_ means that we do not count bigons where both vertices
+are the same. Note that a _non-embedded_ incident bigon would imply
+that all four arcs at this node were joined together to form two
+loops, each bounding its own 1-gon (which models a 1-crossing unknot
+component of a link diagram).
+
+If the underlying graph is disconnected, this routine will ignore the
+presence of any other connected components. In particular, it will not
+worry about whether other disjoint components have been placed inside
+or outside any bigons.
+
+Returns:
+    The number of incident embedded bigons, which will be between 0
+    and 4 inclusive.)doc";
+
 // Docstring regina::python::doc::ModelLinkGraphNode_::index
 static const char *index =
 R"doc(Returns the index of this node within the overall graph. If the graph
@@ -580,6 +600,42 @@ contains *n* nodes, then the index will be a number between 0 and
 
 Returns:
     the index of this node.)doc";
+
+// Docstring regina::python::doc::ModelLinkGraphNode_::loops
+static const char *loops =
+R"doc(Returns the number of loops incident with this node.
+
+For a connected 4-valent graph, this is equivalent to the number of
+1-gons in the dual cell decomposition that are incident with this
+node.
+
+If the underlying graph is disconnected, this routine will ignore the
+presence of any other connected components. In particular, it will not
+worry about whether other disjoint components have been placed inside
+or outside any 1-gons.
+
+Returns:
+    The number of incident loops, which will be between 0 and 2
+    inclusive.)doc";
+
+// Docstring regina::python::doc::ModelLinkGraphNode_::triangles
+static const char *triangles =
+R"doc(Returns the number of embedded triangles in the dual cell
+decomposition that are incident with this node.
+
+Here _embedded_ means that we do not count triangles where two
+vertices are the same. Note that a _non-embedded_ incident triangle
+would imply that the underlying graph contains a loop bounding a 1-gon
+(which models a trivial twist in a link diagram).
+
+If the underlying graph is disconnected, this routine will ignore the
+presence of any other connected components. In particular, it will not
+worry about whether other disjoint components have been placed inside
+or outside any triangles.
+
+Returns:
+    The number of incident embedded triangles, which will be between 0
+    and 4 inclusive.)doc";
 
 }
 
@@ -1116,6 +1172,16 @@ Parameter ``lhs``:
 
 Parameter ``rhs``:
     the graph whose contents should be swapped with *lhs*.)doc";
+
+// Docstring regina::python::doc::ModelLinkGraph_::isConnected
+static const char *isConnected =
+R"doc(Identifies whether this graph is connected.
+
+For the purposes of this routine, an empty graph is considered to be
+connected.
+
+Returns:
+    ``True`` if and only if this graph is connected.)doc";
 
 // Docstring regina::python::doc::ModelLinkGraph_::isSimple
 static const char *isSimple =
